# gen/openapiv2/services.swagger.json
@@ -1329,62 +1329,6 @@
         ]
       }
     },
-    "/v1/sync/games/{gameId}/subscribe": {
-      "get": {
-        "summary": "Subscribe to game changes. Server streams GameUpdate messages to clients\nas other players make moves. Supports reconnection via from_sequence.",
-        "operationId": "GameSyncService_Subscribe",
-        "responses": {
-          "200": {
-            "description": "A successful response.(streaming responses)",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "result": {
-                  "$ref": "#/definitions/v1GameUpdate"
-                },
-                "error": {
-                  "$ref": "#/definitions/rpcStatus"
-                }
-              },
-              "title": "Stream result of v1GameUpdate"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "gameId",
-            "description": "Game ID to subscribe to",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "playerId",
-            "description": "Player ID this client represents (for filtering own moves)",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "fromSequence",
-            "description": "Resume from this sequence number (for reconnection).\nServer will send any missed updates since this sequence.\nUse 0 to start from current state.",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "GameSyncService"
-        ]
-      }
-    },
     "/v1/users": {
       "get": {
         "summary": "ListUsers returns all available users",
